added milestone 1 and 2

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <div class="container-lg">
+        <main>
+          <h1 class="text-center">Il mio Team</h1>
+          <ul id="team-list"></ul>
+      </main>
+    </div>
 
   <!-- javascript connection -->
    <script src="jscript/script.js"></script>
