--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <div class="container-lg">
         <main>
           <h1 class="text-center">Il mio Team</h1>
-          <ul id="team-list"></ul>
+          <ul id="team-list" class="d-none"></ul>
+
+          <!-- contenitore per le cards -->
+          <div id="cards-box"></div>
           
       </main>
     </div>
